step 3. changing properties handling